objects/Line_Item__c.object
<CustomObject>
    <description>it is used as junction object to store the records</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>here is total amount for that</description>
        <formula>Unit_Price__c  *  Unit_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_of_Item__c</fullName>
        <description>description of item purchased</description>
        <label>Description of Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Statement_No__c</fullName>
        <description>here is invoice statement no to which it belongs</description>
        <label>Invoice Statement No</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>Line Item</relationshipLabel>
        <relationshipName>Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Here is price for each item</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Sold__c</fullName>
        <description>item sold</description>
        <label>Unit Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Invoice_Statement_No__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Unit_Sold__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>